--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ li {
 /* main */
 .main {
   display: inline-block;
-  background-image: url(../img/burger-main.jpg);
+  background-image: url(./img/burger-main.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
